<resources>
    <string name="app_name">Drawables</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="plus">+</string>
    <string name="minus_button">Minus Button</string>
    <string name="minus">-</string>
    <string name="plus_button">Plus Button</string>
    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>
</resources>